Styling of panel header responsively + fix of overflow restriction on global body

--- a/code_review/static/css/style.css
+++ b/code_review/static/css/style.css
@@ -69,9 +69,6 @@
 /* global background */
 body {
 	background-color: black;
-	overflow-y:hidden;	
-	
-	
 }
 
 
@@ -275,17 +272,23 @@ body {
   padding-top: 40px;
 }
 
-
 #wrapper {
 	margin-left: auto;
 	margin-right: auto;
 	width:1280px;
-	
 	overflow-y:hidden;
 }
 
+/*********/
+/* COURSE LIST PAGE */
+/********/
+#course_name{
+	margin-left: 40px;
+}
 
-
-
+#course_assignments{
+	float: right;
+	display: inherit;
+}
 
 
